change version 5.5.0.RELEASE