@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.terasoluna.batch</groupId>
         <artifactId>terasoluna-batch-build</artifactId>
-        <version>5.4.0.RELEASE</version>
+        <version>5.5.0.RELEASE</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-batch</artifactId>
@@ -29,22 +29,22 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
-                        <compilerId>groovy-eclipse-compiler</compilerId>
                         <source>${java-version}</source>
                         <target>${java-version}</target>
                     </configuration>
-                    <dependencies>
-                       <dependency>
-                         <groupId>org.codehaus.groovy</groupId>
-                         <artifactId>groovy-eclipse-compiler</artifactId>
-                         <version>${groovy-eclipse-compiler.version}</version>
-                       </dependency>
-                       <dependency>
-                         <groupId>org.codehaus.groovy</groupId>
-                         <artifactId>groovy-eclipse-batch</artifactId>
-                         <version>${groovy-eclipse-batch.version}</version>
-                       </dependency>
-                     </dependencies>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.gmavenplus</groupId>
+                    <artifactId>gmavenplus-plugin</artifactId>
+                    <version>${gmavenplus-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>addTestSources</goal>
+                                <goal>compileTests</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -124,11 +124,6 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-assembly-plugin</artifactId>
-                    <version>${maven-assembly-plugin.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-clean-plugin</artifactId>
                     <version>${maven-clean-plugin.version}</version>
                 </plugin>
@@ -144,21 +139,13 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <version>${maven-site-plugin.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
                         <includes>
                             <include>**/*Spec.java</include>
                         </includes>
-                        <argLine>${jacocoArgs}</argLine>
-                        <classpathDependencyExcludes>
-                            <classpathDependencyExclude>ch.qos.logback:logback-classic</classpathDependencyExclude>
-                        </classpathDependencyExcludes>
+                        <argLine>--add-opens java.base/java.io=ALL-UNNAMED ${jacocoArgs}</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -166,6 +153,13 @@
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>${jacoco-maven-plugin.version}</version>
                     <executions>
+                        <execution>
+                            <id>report</id>
+                            <phase>test</phase>
+                            <goals>
+                                <goal>report</goal>
+                            </goals>
+                        </execution>
                         <execution>
                             <id>prepare-agent</id>
                             <phase>test-compile</phase>
@@ -182,9 +176,9 @@
                     </executions>
                 </plugin>
                 <plugin>
-                    <groupId>com.google.code.maven-license-plugin</groupId>
-                    <artifactId>maven-license-plugin</artifactId>
-                    <version>${com.google.code.maven-license-plugin.version}</version>
+                    <groupId>com.mycila</groupId>
+                    <artifactId>license-maven-plugin</artifactId>
+                    <version>${license-maven-plugin.version}</version>
                     <configuration>
                         <header>${project.root.basedir}/../license/header.txt</header>
                         <includes>
@@ -198,31 +192,13 @@
                     </configuration>
                 </plugin>
                 <plugin>
-                    <groupId>net.revelc.code</groupId>
+                    <groupId>net.revelc.code.formatter</groupId>
                     <artifactId>formatter-maven-plugin</artifactId>
                     <version>${formatter-maven-plugin.version}</version>
                     <configuration>
                         <configFile>${project.root.basedir}/../eclipse/formatter.xml
                         </configFile>
                         <lineEnding>LF</lineEnding>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-antrun-plugin</artifactId>
-                    <version>${maven-antrun-plugin.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.eluder.coveralls</groupId>
-                    <artifactId>coveralls-maven-plugin</artifactId>
-                    <version>${coveralls-maven-plugin.version}</version>
-                    <configuration>
-                        <jacocoReports>
-                            <jacocoReport>terasoluna-batch/target/site/jacoco/jacoco.xml</jacocoReport>
-                        </jacocoReports>
-                        <sourceDirectories>
-                            <sourceDirectory>terasoluna-batch/src/main/java</sourceDirectory>
-                        </sourceDirectories>
                     </configuration>
                 </plugin>
             </plugins>
@@ -235,6 +211,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -257,12 +237,12 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>net.revelc.code</groupId>
+                <groupId>net.revelc.code.formatter</groupId>
                 <artifactId>formatter-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>com.google.code.maven-license-plugin</groupId>
-                <artifactId>maven-license-plugin</artifactId>
+                <groupId>com.mycila</groupId>
+                <artifactId>license-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
@@ -328,14 +308,6 @@
             </dependency>
             <!-- == End DBUnit == -->
 
-            <!-- == Begin CGLib == -->
-            <dependency>
-                <groupId>cglib</groupId>
-                <artifactId>cglib-nodep</artifactId>
-                <version>${cglib.cglib-nodep.version}</version>
-            </dependency>
-            <!-- == End CGLib == -->
-
             <!-- == Begin Other == -->
             <dependency>
                 <groupId>jakarta.inject</groupId>
@@ -347,11 +319,49 @@
             <!-- == Begin Groovy == -->
             <dependency>
                 <groupId>org.codehaus.groovy</groupId>
-                <artifactId>groovy-all</artifactId>
-                <version>${org.codehaus.groovy.version}</version>
-                <type>pom</type>
+                <artifactId>groovy</artifactId>
+                <version>${groovy.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-sql</artifactId>
+                <version>${groovy.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-datetime</artifactId>
+                <version>${groovy.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-dateutil</artifactId>
+                <version>${groovy.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-templates</artifactId>
+                <version>${groovy.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-json</artifactId>
+                <version>${groovy.version}</version>
+                <scope>test</scope>
             </dependency>
             <!-- == End Groovy == -->
+            
+            <!-- == Begin SLF4J-API == -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j-api.version}</version>
+            </dependency>
+            <!-- == End SLF4J-API == -->
         </dependencies>
     </dependencyManagement>
 
@@ -363,10 +373,7 @@
             <artifactId>spring-batch-core</artifactId>
         </dependency>
         <!-- Spring JDBC -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-        </dependency>
+
         <!-- == Spring Test == -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -437,19 +444,19 @@
         </dependency>
         <!-- == End DBUnit == -->
 
-        <!-- == Begin CGLib == -->
+        <!-- == Begin ByteBuddy == -->
         <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib-nodep</artifactId>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- == End CGLib == -->
+        <!-- == End ByteBuddy == -->
 
         <!-- == Begin Data Source == -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
-            <scope>runtime</scope>
+            <scope>compile</scope>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
@@ -476,88 +483,95 @@
         <!-- == End Database == -->
 
         <!-- == Begin Groovy == -->
-
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-sql</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-datetime</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-dateutil</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-templates</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-json</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!-- == End Groovy == -->
+
+        <!-- == Begin SLF4J-API == -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <!-- == End SLF4J-API == -->
     </dependencies>
     <properties>
         <!-- == Maven Plugin Versions == -->
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <groovy-eclipse-compiler.version>3.6.0-02</groovy-eclipse-compiler.version>
-        <groovy-eclipse-batch.version>2.5.8-02</groovy-eclipse-batch.version>
-        <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
-        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
-        <maven-source-plugin.version>3.2.0</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
-        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
-        <maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>
-        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
-        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
-        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-        <maven-site-plugin.version>3.8.2</maven-site-plugin.version>
-        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
-        <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
-        <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
-        <com.google.code.maven-license-plugin.version>1.4.0</com.google.code.maven-license-plugin.version>
-        <formatter-maven-plugin.version>0.5.2</formatter-maven-plugin.version>
-        <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
+        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <gmavenplus-plugin.version>1.13.1</gmavenplus-plugin.version>
+        <maven-dependency-plugin.version>3.3.0</maven-dependency-plugin.version>
+        <maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
+        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
+        <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
+        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
+        <maven-install-plugin.version>3.0.1</maven-install-plugin.version>
+        <maven-deploy-plugin.version>3.0.0</maven-deploy-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
+        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
+        <license-maven-plugin.version>4.2.rc3</license-maven-plugin.version>
+        <formatter-maven-plugin.version>2.20.0</formatter-maven-plugin.version>
 
         <!-- == Dependency Versions == -->
         <!-- == Spring Boot Dependencies == -->
-        <org.springframework.boot.version>2.4.1</org.springframework.boot.version>
+        <org.springframework.boot.version>3.0.1</org.springframework.boot.version>
 
         <!-- == MyBatis3 == -->
-        <org.mybatis.version>3.5.6</org.mybatis.version>
-        <org.mybatis.spring.version>2.0.6</org.mybatis.spring.version>
+        <org.mybatis.version>3.5.11</org.mybatis.version>
+        <org.mybatis.spring.version>3.0.1</org.mybatis.spring.version>
 
         <!-- == Spock == -->
-        <org.spockframework.spock-core.version>1.3-groovy-2.5</org.spockframework.spock-core.version>
-        <org.spockframework.spock-spring.version>1.3-groovy-2.5</org.spockframework.spock-spring.version>
-        <com.athaydes.spock-reports.version>1.6.2</com.athaydes.spock-reports.version>
+        <org.spockframework.spock-core.version>2.2-groovy-3.0</org.spockframework.spock-core.version>
+        <org.spockframework.spock-spring.version>2.2-groovy-3.0</org.spockframework.spock-spring.version>
+        <com.athaydes.spock-reports.version>2.1-groovy-3.0</com.athaydes.spock-reports.version>
+
+        <!-- == Groovy == -->
+        <groovy.version>3.0.11</groovy.version>
+
+        <!-- == SLF4J-API == -->
+        <slf4j-api.version>1.7.36</slf4j-api.version>
 
         <!-- == SLF4J-Test == -->
         <uk.org.lidalia.slf4j-test.version>1.2.0</uk.org.lidalia.slf4j-test.version>
 
         <!-- == DBUnit == -->
-        <org.dbunit.dbunit.version>2.5.4</org.dbunit.dbunit.version>
-
-        <!-- == CGLib == -->
-        <cglib.cglib-nodep.version>3.3.0</cglib.cglib-nodep.version>
+        <org.dbunit.dbunit.version>2.7.3</org.dbunit.dbunit.version>
 
         <!-- == Jakarta Inject == -->
-        <jakarta.inject.version>1.0.3</jakarta.inject.version>
-
-        <!-- == Groovy == -->
-        <org.codehaus.groovy.version>2.5.9</org.codehaus.groovy.version>
+        <jakarta.inject.version>2.0.1</jakarta.inject.version>
 
         <!-- == Project Properties == -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <archetype.test.skip>true</archetype.test.skip>
         <encoding>UTF-8</encoding>
-        <java-version>1.8</java-version>
+        <java-version>17</java-version>
         <project.root.basedir>${project.basedir}</project.root.basedir>
     </properties>
 </project>
